# my-coursework

./: .env.example  .gitignore  README.MD  pyproject.toml  user_settings.json
htmlcov/: index.html
src/: common_func.py  decirators.py  main.py  reports.py  services.py  views.py
tests/: conftest.py  test_common_func.py  test_reports.py  test_services.py  test_views.py
