[project]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei",email = "ggread123.rezerv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "freezegun (>=1.5.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "decouple (>=0.0.7,<0.0.8)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "optional (>=0.0.1,<0.0.2)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]


[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = "black"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

